err/dreampie.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dreampie-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/dreampielib'...
Listing './lib/python3.5/site-packages/dreampielib/common'...
Listing './lib/python3.5/site-packages/dreampielib/data'...
Listing './lib/python3.5/site-packages/dreampielib/data/language-specs'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py2'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/common'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess'...
Compiling './lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess/__init__.py'...
***   File "./lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess/__init__.py", line 315
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess/split_to_singles.py'...
***   File "./lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess/split_to_singles.py", line 214
    print "Test was successful"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess/trunc_traceback.py'...
***   File "./lib/python3.5/site-packages/dreampielib/data/subp-py2/dreampielib/subprocess/trunc_traceback.py", line 80
    def trunc_traceback((_typ, value, tb), source_file):
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dreampielib/data/subp-py3'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py3/dreampielib'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py3/dreampielib/common'...
Listing './lib/python3.5/site-packages/dreampielib/data/subp-py3/dreampielib/subprocess'...
Listing './lib/python3.5/site-packages/dreampielib/gui'...
Compiling './lib/python3.5/site-packages/dreampielib/gui/SimpleGladeApp.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/SimpleGladeApp.py", line 55
    except (IOError,locale.Error), e:
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/gui/__init__.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/__init__.py", line 240
    except StartError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/gui/file_dialogs.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/file_dialogs.py", line 58
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/gui/gtkexcepthook.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/gtkexcepthook.py", line 54
    if args: print args
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dreampielib/gui/odict.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/odict.py", line 611
    raise TypeError, ('pop expected at most 2 arguments, got %s' %
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/gui/subprocess_interact.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/subprocess_interact.py", line 51
    except (subprocess.pywintypes.error, Exception), why:
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/gui/update_check.py'...
***   File "./lib/python3.5/site-packages/dreampielib/gui/update_check.py", line 51
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dreampielib/subprocess'...
Compiling './lib/python3.5/site-packages/dreampielib/subprocess/__init__.py'...
***   File "./lib/python3.5/site-packages/dreampielib/subprocess/__init__.py", line 312
    except SyntaxError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dreampielib/subprocess/split_to_singles.py'...
***   File "./lib/python3.5/site-packages/dreampielib/subprocess/split_to_singles.py", line 211
    print "Test was successful"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dreampielib/subprocess/trunc_traceback.py'...
***   File "./lib/python3.5/site-packages/dreampielib/subprocess/trunc_traceback.py", line 77
    def trunc_traceback((_typ, value, tb), source_file):
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/pixmaps'...
Listing './share/python-wheels'...
